# lexical-variation

./: .env.example  .gitignore  2026-02-22_todos.md  CLAUDE.md  Makefile  README.md  environment.yml  full-sample-todos.md  power_analysis.md  pyproject.toml  tangram_sets.json  todos.md
.claude/: CLAUDE.md  settings.local.json
.claude/rules/: architecture.md  data-pipeline.md  llm-simulation.md  python-env.md  sentry.md  testing.md
analysis/: 00_data_overview.qmd  00_preprocess.qmd  01_outcome_neutral.qmd  02_primary_analysis.qmd  03_secondary_analysis.qmd  04_exploratory.qmd  05_exit_survey.qmd  PILOT_SUMMARY.md  README.md  SI_exploratory.qmd  SI_pilot.qmd  TODOS.md  animate_umap.py  boyce_sbert_embeddings.npy  combine_runs.py  compare_exp1_exp2.py  compute_derived.py  compute_embeddings.py  config.R  contact_network_analysis.py  extract_run.py  filter_nonreferential.py  fit_models.R  group_specificity.R  label_dynamics_analysis.py  pairwise_mixed.csv  pairwise_separate.csv  pilot_analysis.py  plot_style.py  power_analysis.Qmd  preprocessing.py  process_data.py  processed_data  results_mixed.csv  results_separate.csv  run_pipeline.py  test_data_integrity.py  test_subgroup_generation.py  visualize_pilot.py
analysis/20260222_132407/: bonuses.csv
analysis/data/: adjacent_similarities.csv  embeddings.npy  games.csv  messages.csv  (+7 more)
experiment/: README.md  TEST-RESULTS.md  TEST_PLAN.md  TODOS.md  copy_tajriba.sh  holistic-testing.plan.md  nohup.out  open_players.sh  package-lock.json  package.json  pick_tangrams.Qmd  playwright.config.ts
figures/: sync_figures.sh
(+262 files in other folders)
