[project]
name = "lexical-variation"
version = "0.1.0"
description = "Multiplayer reference game experiment studying lexical variation and social signaling"
requires-python = ">=3.11"
dependencies = [
    # Data analysis
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Machine learning
    "scikit-learn>=1.4",
    "torch>=2.0",
    "torchvision>=0.15",
    # NLP / Transformers
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "huggingface-hub>=0.20",
    "datasets>=2.0",
    "tokenizers>=0.15",
    "safetensors>=0.4",
    # Jupyter
    "ipykernel>=6.0",
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "jupyter-client>=8.0",
    "nbformat>=5.0",
    "nbclient>=0.10",
    # R integration
    "pyreadr>=0.5",
    "rpy2>=3.5",
    # PDF/SVG handling
    "cairosvg>=2.7",
    "svglib>=1.5",
    "reportlab>=4.0",
    "lxml>=5.0",
    # Utilities
    "requests>=2.31",
    "pyyaml>=6.0",
    "tqdm>=4.60",
    "joblib>=1.3",
    "httpx>=0.27",
    "umap-learn>=0.5.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
